Updated for and by exception

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -13,7 +13,7 @@ serverurl=unix:///var/run//supervisor.sock
 
 [program:etherpad]
 directory=/opt/etherpad
-command=node node_modules/ep_etherpad-lite/node/server.js
+command=node node_modules/ep_etherpad-lite/node/server.js --settings /etc/settings.json
 user=root
 autostart=true
 autorestart=true
